--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prop-types": "^15.5.6",
     "react": "15.4.2",
     "react-dom": "15.4.2",
+    "react-froala-wysiwyg": "^2.5.1",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0"
   },
