--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "start": "webpack-dev-server"
   },
   "dependencies": {
+    "axios": "^0.16.1",
     "jquery": "2.2.4",
     "prop-types": "^15.5.6",
     "react": "15.4.2",
     "react-dom": "15.4.2",
     "react-froala-wysiwyg": "^2.5.1",
+    "react-redux": "^5.0.4",
     "react-router": "^4.0.0",
-    "react-router-dom": "^4.0.0"
+    "react-router-dom": "^4.0.0",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -22,6 +26,7 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
